completed user story 3

--- a/app/views/comedians/index.html.erb
+++ b/app/views/comedians/index.html.erb
@@ -9,6 +9,7 @@
       <% if special.comedian_id == comedian.id %>
         <%= special.title %>
         <%= special.length %>
+        <img src="<%= special.image %>"/>
       <% end %>
     <% end %>
   </section>
