--- a/app/views/comedians/index.html.erb
+++ b/app/views/comedians/index.html.erb
@@ -2,14 +2,16 @@
 
 <% @comedians.each do |comedian| %>
   <section class="comedian<%= comedian.id %>">
-    <%= comedian.name %>
-    <%= comedian.age %>
-    <%= comedian.city %>
+    <ul>
+      <li><%= comedian.name %></li>
+      <li>Age: <%= comedian.age %></li>
+      <li>City: <%= comedian.city %></li>
+    </ul>
     <% @specials.each do |special| %>
       <% if special.comedian_id == comedian.id %>
+      <p><img src="<%= special.image %>" class="special_image"/></p>
         <%= special.title %>
-        <%= special.length %>
-        <img src="<%= special.image %>"/>
+        <p>Length: <%= special.length %></p>
       <% end %>
     <% end %>
   </section>
