finished user story 5

--- a/app/views/comedians/index.html.erb
+++ b/app/views/comedians/index.html.erb
@@ -1,11 +1,18 @@
 <h1>Welcome to Laugh Tracks!</h1>
 
 <section class="statistics">
-  <p>Average age: <%= @avg_age %></p>
+  <h2>Statistics</h2>
+  <p>Average age: <%= @avg_age.round %></p>
   <p>Average special run length: <%= @avg_run_length %></p>
-  <p>Cities: <%= @cities %></p>
+  <p>Cities:
+    <ul>
+      <% @cities.each do |city| %>
+        <li><%= city %></li>
+      <% end %>
+    </ul></p>
 </section>
 
+<h2>Comedians</h2>
 <% @comedians.each do |comedian| %>
   <section class="comedian<%= comedian.id %>">
     <ul>
