--- a/app/views/comedians/new.html.erb
+++ b/app/views/comedians/new.html.erb
@@ -1,11 +1,18 @@
 <h1>Add a new comedian</h1>
 
-<%= form_for(@comedian) do |f| %>
-<%= f.label :name %>
-<%= f.text :name %>
-<%= f.label :age %>
-<%= f.integer :age %>
-<%= f.label :city %>
-<%= f.text :name %>
-<%= f.submit "Add new comedian" %>
-<% end %>
+<section class="new_form">
+  <%= form_for @comedian do |f| %>
+
+  <%= f.label :name %>
+  <%= f.text_field :name %>
+
+  <%= f.label :age %>
+  <%= f.number_field :age %>
+
+  <%= f.label :city %>
+  <%= f.text_field :city %>
+
+  <%= f.submit "Add new comedian" %>
+
+  <% end %>
+</section>
