--- a/app/views/comedians/welcome.html.erb
+++ b/app/views/comedians/welcome.html.erb
@@ -1,3 +1,15 @@
-<h1>Welcome to Laugh Tracks!</h1>
-
-<%= link_to "Enter Site", comedians_path %>
+<img src="https://media1.fdncms.com/pittsburgh/imager/u/original/13289398/istock-1010169952.jpg" alt="microphone background image" class="welcome_background" />
+<div class="welcome_container">
+  <div class="text">
+    <h1 class="welcome_message">Welcome to Laugh Tracks!</h1>
+  </div>
+  <section class="enter_link">
+    <%= link_to "Enter Site", comedians_path %>
+  </section>
+  <section class="info_box">
+    <p>This is a solo project for<br/>
+      The Turing School of Software and Design's<br/>
+      Backend Engineering Module 2 program.</p>
+    <p>Earl Stephens <https://github.com/earl-stephens></p>
+  </section>
+</div>
