--- a/app/views/comedians/welcome.html.erb
+++ b/app/views/comedians/welcome.html.erb
@@ -6,10 +6,11 @@
   <section class="enter_link">
     <%= link_to "Enter Site", comedians_path %>
   </section>
-  <section class="info_box">
-    <p>This is a solo project for<br/>
-      The Turing School of Software and Design's<br/>
-      Backend Engineering Module 2 program.</p>
-    <p>Earl Stephens <https://github.com/earl-stephens></p>
-  </section>
 </div>
+  <footer class="info_box">
+    <p>This is a solo project for
+      The Turing School of Software and Design's
+      Backend Engineering Module 2 program.</p>
+    <p>Earl Stephens<br/>
+       https://github.com/earl-stephens</p>
+  </footer>
