--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -59,3 +59,96 @@
   height: 268px;
   width: 182px;
 }
+.nav_bar_container {
+  background-color: burlywood;
+  color: black;
+  padding: 1px;
+  font-size: 25px;
+  display: flex;
+  justify-content: center;
+}
+.stats_container {
+  background-color: bisque;
+  display: flex;
+  flex-flow: wrap;
+  justify-content: center;
+  color: black;
+  border-bottom: 2px solid black;
+  margin-bottom: 1px;
+}
+.stats_header {
+  width: 100%;
+  text-align: center;
+}
+.stats1 {
+  padding-right: 65px;
+  padding-left: 65px;
+}
+.stats4 {
+  width: 100%;
+  text-align: center;
+}
+.new_link {
+  margin-bottom: 10px;
+  margin-top: 10px;
+}
+.comedian_container {
+  background-color: wheat;
+  display: flex;
+  flex-flow: wrap;
+  justify-content: center;
+  color: black;
+}
+.comic_header {
+  width: 100%;
+  text-align: center;
+}
+.comedian_card_container {
+  background-color: tan;
+  width: 100%;
+  display: flex;
+  flex-flow: wrap;
+  justify-content: center;
+  margin-bottom: 18px;
+}
+.comedian_info_section {
+  width: 95%;
+}
+.comic_name {
+  font-size: 28px;
+}
+.specials_info_section {
+  width: 30%;
+}
+.new_form_page h1 {
+  border: 2px solid black;
+  background-color: wheat;
+  color: black;
+  display: inline-block;
+  margin-left: 15px;
+  margin-top: 35px;
+  padding-left: 10px;
+  padding-right: 10px;
+}
+.new_form_page img {
+  min-height: 100%;
+  width: 100%;
+  height: auto;
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: block;
+  z-index: -5;
+}
+.form_fors {
+  border: 2px solid black;
+  background-color: wheat;
+  color: black;
+  display: inline-block;
+  margin-top: 25px;
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  margin-left: 15px;
+}
