--- a/app/views/comedians/new.html.erb
+++ b/app/views/comedians/new.html.erb
@@ -1,18 +1,21 @@
-<h1>Add a new comedian</h1>
+<div class="new_form_page">
+  <img src="http://mediad.publicbroadcasting.net/p/kmuw/files/styles/x_large/public/201703/stand-up-comedy.jpg" alt="microphone on stage">
+  <h1>Add a new comedian</h1>
 
-<section class="new_form">
-  <%= form_for @comedian do |f| %>
+  <section class="new_form">
+    <%= form_for @comedian do |f| %>
 
-  <%= f.label :name %>
-  <%= f.text_field :name %>
+    <p class="form_fors"><%= f.label :name %>
+    <%= f.text_field :name %></p><br/>
 
-  <%= f.label :age %>
-  <%= f.number_field :age %>
+    <p class="form_fors"><%= f.label :age %>
+    <%= f.number_field :age %></p><br/>
 
-  <%= f.label :city %>
-  <%= f.text_field :city %>
+    <p class="form_fors"><%= f.label :city %>
+    <%= f.text_field :city %></p><br/>
 
-  <%= f.submit "Add new comedian" %>
+    <p class="form_fors"><%= f.submit "Add new comedian" %></p>
 
-  <% end %>
-</section>
+    <% end %>
+  </section>
+</div>
