--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -95,9 +95,10 @@
 .comedian_container {
   background-color: wheat;
   display: flex;
-  flex-flow: wrap;
+  flex-direction: column;
   justify-content: center;
   color: black;
+  width: 100%;
 }
 .comic_header {
   width: 100%;
@@ -109,17 +110,22 @@
   display: flex;
   flex-flow: wrap;
   justify-content: center;
-  margin-bottom: 18px;
+  margin-bottom: 20px;
 }
 .comedian_info_section {
-  width: 95%;
+  width: 100%;
 }
 .comic_name {
   font-size: 28px;
 }
-.specials_info_section {
-  width: 30%;
+.specials_container {
+  background-color: tan;
+  width: 100%;
+  display: flex;
+  flex-flow: wrap;
+  justify-content: space-around;
 }
+
 .new_form_page h1 {
   border: 2px solid black;
   background-color: wheat;
